make validation text display none and fix auto zoom on mobile

--- a/stylesheets/_desktop.scss
+++ b/stylesheets/_desktop.scss
@@ -130,6 +130,5 @@ main {
   width: 80%;
   margin: 10px 0 ;
   padding-left: 25px;
-  opacity: 0;
-  transition: opacity 1s;
+  display: none;
 }
